Some changes in settings

--- a/README
+++ b/README
@@ -1,11 +1,1 @@
-<<<<<<< HEAD
-First file in repo
-=======
-First file ever in casual
->>>>>>> 1517ed414785e43a7df5ae32163fce479357da63
-
-Changeing a line to test push
-
-Me too...
-
-
+Instructions here: http://casual.laz.se/redmine/projects/casual/wiki/Getting_started
